--- a/.github/workflows/gradle-clean-build.yml
+++ b/.github/workflows/gradle-clean-build.yml
@@ -21,7 +21,8 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           gradle-version: 7.6
-
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
       - name: Execute Gradle clean and build
         run: ./gradlew clean build
 
