upload files does not found anywhere

--- a/.github/workflows/gradle-clean-build.yml
+++ b/.github/workflows/gradle-clean-build.yml
@@ -31,3 +31,5 @@ jobs:
         with:
           name: github-workflow-gradle-project-build-reports
           path: build/reports/
+          if-no-files-found: error
+          retention-days: 5
