--- a/build.gradle
+++ b/build.gradle
@@ -32,3 +32,10 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+if (hasProperty('buildScan')) {
+    buildScan {
+        termsOfServiceUrl = 'https://gradle.com/terms-of-service'
+        termsOfServiceAgree = 'yes'
+    }
+}
